--- a/my-react-ts-app/package.json
+++ b/my-react-ts-app/package.json
@@ -30,6 +30,7 @@
     "my-react-ts-app": "file:",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.54.2",
     "react-i18next": "^15.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
