--- a/my-react-ts-app/package.json
+++ b/my-react-ts-app/package.json
@@ -34,6 +34,7 @@
     "react-i18next": "^15.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
+    "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
