--- a/my-react-ts-app/package.json
+++ b/my-react-ts-app/package.json
@@ -23,6 +23,9 @@
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.98.0",
+    "@tsparticles/engine": "^3.7.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.7.1",
     "@types/axios": "^0.9.36",
     "@types/react-i18next": "^7.8.3",
     "axios": "^1.7.9",
@@ -34,6 +37,7 @@
     "react-i18next": "^15.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
+    "react-typist-component": "^1.1.1",
     "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.13"
   },
@@ -53,7 +57,6 @@
     "vite": "^6.0.3"
   },
   "peerDependencies": {
-    "react": "^18.0.0",
     "react-dom": "^18.0.0"
   }
 }
