--- a/my-react-ts-app/package.json
+++ b/my-react-ts-app/package.json
@@ -37,6 +37,7 @@
     "react-i18next": "^15.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
+    "react-svg": "^16.2.0",
     "react-typist-component": "^1.1.1",
     "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.13"
