--- a/my-react-ts-app/package.json
+++ b/my-react-ts-app/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.2.0",
+    "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
     "react-svg": "^16.2.0",
