feat: added install process

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start:backend": "node my-backend/server.js",
     "start:frontend": "npm --prefix ./my-react-ts-app run dev",
-    "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
+    "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
+    "install": "concurrently \"npm install --prefix ./my-react-ts-app\" \"npm install --prefix ./my-backend\""
   },
   "keywords": [],
   "author": "",
