--- a/my-backend/package.json
+++ b/my-backend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.2",
     "express-http-proxy": "^2.1.1",
     "morgan": "^1.10.0",
-    "my-backend": "file:"
+    "my-backend": "file:",
+    "react-page": "file:.."
   }
 }
