--- a/my-react-ts-app/package.json
+++ b/my-react-ts-app/package.json
@@ -2,7 +2,6 @@
   "name": "my-react-ts-app",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -30,7 +29,6 @@
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.2.0",
     "react-multi-carousel": "^2.8.5",
-    "react-page": "file:..",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
     "react-svg": "^16.2.0",
@@ -46,6 +44,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "globals": "^15.13.0",
+    "sass-embedded": "^1.83.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.1",
     "vite": "^6.0.3"
