--- a/my-react-ts-app/package.json
+++ b/my-react-ts-app/package.json
@@ -21,10 +21,12 @@
     "@tsparticles/slim": "^3.7.1",
     "@types/axios": "^0.9.36",
     "@types/react-i18next": "^7.8.3",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "i18next": "^24.2.0",
     "my-react-ts-app": "file:",
     "react": "^18.0.0",
+    "react-animate-on-scroll": "^2.1.9",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.2.0",
