feat: updated features section TARN-09

--- a/my-react-ts-app/.env
+++ b/my-react-ts-app/.env
@@ -1,3 +1,4 @@
 VITE_API_URL=http://localhost:3000
 TEMPLATE_IMAGE_URL=https://mui.com
 AWS_S3_HOBBY_CDN=https://d34xqaew6odfkx.cloudfront.net/
+VITE_AWS_S3_HOBBY_CDN=https://hobby-tkang.s3.us-east-2.amazonaws.com/
