--- a/my-react-ts-app/package.json
+++ b/my-react-ts-app/package.json
@@ -6,7 +6,10 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -15,7 +18,6 @@
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
     "@mui/styled-engine-sc": "^6.2.1",
-    "@reduxjs/toolkit": "^2.5.0",
     "@tsparticles/engine": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.7.1",
@@ -23,6 +25,7 @@
     "@types/react-i18next": "^7.8.3",
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
+    "framer-motion": "^12.5.0",
     "i18next": "^24.2.0",
     "my-react-ts-app": "file:",
     "react": "^18.0.0",
@@ -31,25 +34,32 @@
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.2.0",
     "react-multi-carousel": "^2.8.5",
-    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
     "react-svg": "^16.2.0",
     "react-typist-component": "^1.1.1",
-    "redux-thunk": "^3.1.0",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "swiper": "^11.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/i18next": "^12.1.0",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^1.3.1",
+    "@vitest/ui": "^1.3.1",
     "eslint": "^9.17.0",
     "globals": "^15.13.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jsdom": "^24.0.0",
     "sass-embedded": "^1.83.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.1",
-    "vite": "^6.0.3"
+    "vite": "^6.0.3",
+    "vitest": "^1.3.1"
   },
   "peerDependencies": {
     "react-dom": "^18.0.0"
