--- a/my-react-ts-app/package.json
+++ b/my-react-ts-app/package.json
@@ -23,6 +23,7 @@
     "@tsparticles/slim": "^3.7.1",
     "@types/axios": "^0.9.36",
     "@types/react-i18next": "^7.8.3",
+    "@vercel/analytics": "^1.5.0",
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "framer-motion": "^12.5.0",
